samples/_failures_safe/1761477982_8d5d2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eb1660b.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_2eb1660b.c:158:21: error: ‘lexer_adv’ undeclared (first use in this function)
  158 |         buffer[0] = lexer_adv
      |                     ^~~~~~~~~
./samples/SAFE/__tmp_2eb1660b.c:158:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2eb1660b.c:158:30: error: expected ‘;’ at end of input
  158 |         buffer[0] = lexer_adv
      |                              ^
      |                              ;
./samples/SAFE/__tmp_2eb1660b.c:158:9: error: expected declaration or statement at end of input
  158 |         buffer[0] = lexer_adv
      |         ^~~~~~
./samples/SAFE/__tmp_2eb1660b.c:158:9: error: expected declaration or statement at end of input
